--- a/partners/partners.html
+++ b/partners/partners.html
@@ -148,7 +148,7 @@ button.secondary {
 
   <div class="container" id="mainContainer">
     <h1>Bloxion Partners</h1>
-    <p>Get an exclusive role, get up to 25% discount and more with our partner program..</p>
+    <p>Get an exclusive role, get up to 25% discount and more with our partner program.</p>
 
     <!-- Login step -->
     <div id="loginStep">
@@ -226,3 +226,4 @@ form.addEventListener("submit", async (e) => {
 </script>
 </body>
 </html>
+
