--- a/partners/partners.html
+++ b/partners/partners.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Bloxion Early Access</title>
+<title>Bloxion Partners</title>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
 
@@ -226,4 +226,5 @@ form.addEventListener("submit", async (e) => {
 </script>
 </body>
 </html>
+
 
