--- a/partners/partners.html
+++ b/partners/partners.html
@@ -1,231 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Bloxion Partners</title>
-<style>
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
-
-:root {
-  --accent1: #00d2ff;
-  --accent2: #00ffa3;
-}
-
-body {
-  margin: 0;
-  height: 100vh;
-  background: radial-gradient(circle at 20% 30%, #0e0e0f, #050505 70%);
-  color: #fff;
-  font-family: 'Inter', system-ui, sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-  position: relative;
-}
-
-/* gradient glow orbs */
-.orb {
-  position: absolute;
-  width: 420px;
-  height: 420px;
-  border-radius: 50%;
-  filter: blur(120px);
-  opacity: 0.18;
-  animation: float 12s ease-in-out infinite alternate;
-}
-.orb.one { background: var(--accent1); top: 10%; left: 12%; }
-.orb.two { background: var(--accent2); bottom: 20%; right: 15%; animation-delay: 2s; }
-
-@keyframes float {
-  0% { transform: translateY(0px) scale(1); opacity: 0.18; }
-  100% { transform: translateY(-40px) scale(1.05); opacity: 0.3; }
-}
-
-.container {
-  text-align: center;
-  width: 90%;
-  max-width: 420px;
-  z-index: 2;
-  animation: fadeIn 1s ease forwards;
-}
-
-@keyframes fadeIn {
-  from { opacity: 0; transform: translateY(10px); }
-  to { opacity: 1; transform: translateY(0); }
-}
-
-h1 {
-  font-size: 1.8rem;
-  font-weight: 700;
-  background: linear-gradient(90deg, var(--accent1), var(--accent2));
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  margin-bottom: 0.6rem;
-}
-
-p {
-  color: #bfbfbf;
-  font-size: 0.95rem;
-  margin-bottom: 1.6rem;
-}
-
-button, input, textarea {
-  font-family: inherit;
-}
-
-/* Inputs */
-input, textarea {
-  width: 100%;
-  background: rgba(255,255,255,0.05);
-  border: 1px solid rgba(255,255,255,0.08);
-  border-radius: 12px;
-  color: #fff;
-  padding: 0.9rem;
-  margin-bottom: 1rem;
-  font-size: 0.9rem;
-  backdrop-filter: blur(10px);
-  transition: border-color 0.2s;
-}
-input:focus, textarea:focus { outline: none; border-color: var(--accent2); }
-::placeholder { color: #888; }
-
-/* Buttons */
-button {
-  width: 100%;
-  box-sizing: border-box;
-  background: linear-gradient(90deg, var(--accent1), var(--accent2));
-  border: none;
-  border-radius: 12px;
-  color: #0f0f0f;
-  font-weight: 600;
-  padding: 0.9rem;
-  font-size: 1rem;
-  cursor: pointer;
-  transition: filter 0.3s, transform 0.15s;
-}
-button:hover { filter: brightness(1.1); transform: translateY(-1px); }
-
-button.secondary {
-  background: rgba(255,255,255,0.1);
-  color: #fff;
-  border: 1px solid rgba(255,255,255,0.2);
-}
-
-/* Toast */
-.toast {
-  position: fixed;
-  bottom: 2rem;
-  left: 50%;
-  transform: translateX(-50%);
-  border-radius: 10px;
-  padding: 0.9rem 1.6rem;
-  font-weight: 500;
-  display: none;
-  z-index: 5;
-}
-.toast.success { background: rgba(0,255,163,0.9); color:#000; }
-.toast.error { background: rgba(255,65,65,0.9); color:#fff; }
-
-/* Footer */
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  text-align: center;
-  padding: 0.9rem 0;
-  background: rgba(255,255,255,0.05);
-  backdrop-filter: blur(10px);
-  font-size: 0.9rem;
-  color: #999;
-}
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bloxion Partners — Application</title>
+  <style>
+    body {
+      background: radial-gradient(circle at 20% 30%, #0e0e0f, #050505 70%);
+      color: #fff;
+      font-family: 'Inter', system-ui, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      flex-direction: column;
+    }
+    form {
+      width: 90%;
+      max-width: 420px;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+    input, textarea {
+      background: rgba(255,255,255,0.05);
+      border: 1px solid rgba(255,255,255,0.08);
+      color: white;
+      border-radius: 12px;
+      padding: 0.9rem;
+      font-size: 0.9rem;
+      backdrop-filter: blur(10px);
+    }
+    button {
+      background: linear-gradient(90deg, #00d2ff, #00ffa3);
+      border: none;
+      border-radius: 12px;
+      color: #0f0f0f;
+      font-weight: 600;
+      padding: 0.9rem;
+      font-size: 1rem;
+      cursor: pointer;
+    }
+    .footer {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      text-align: center;
+      padding: 0.9rem 0;
+      background: rgba(255,255,255,0.05);
+      backdrop-filter: blur(10px);
+      font-size: 0.9rem;
+      color: #999;
+    }
+  </style>
 </head>
 <body>
-  <div class="orb one"></div>
-  <div class="orb two"></div>
-
-  <div class="container" id="mainContainer">
-    <h1>Bloxion Partners</h1>
-    <p>Get an exclusive role, get up to 25% discount and more with our partner program.</p>
-
-    <!-- Login step -->
-    <div id="loginStep">
-      <button id="discordLogin" class="secondary">Login with Discord</button>
-    </div>
-
-    <!-- Form step -->
-    <form id="accessForm" style="display:none;">
-      <input type="text" id="username" placeholder="Discord username" required />
-      <input type="text" id="group" placeholder="Roblox group link or ID" required />
-      <textarea id="reason" placeholder="Why do you want to join?" rows="3" required></textarea>
-      <button type="submit">Submit Request</button>
-    </form>
-  </div>
-
+  <h1>Bloxion Partners Application</h1>
+  <form id="partnerForm">
+    <input type="text" id="group" placeholder="Roblox group link or ID" required />
+    <textarea id="reason" placeholder="Why do you want to join?" rows="3" required></textarea>
+    <button type="submit">Submit Request</button>
+  </form>
   <div class="footer">© 2025 Bloxion. All rights reserved.</div>
-  <div id="toast" class="toast"></div>
 
-<script>
-const loginBtn = document.getElementById("discordLogin");
-const form = document.getElementById("accessForm");
-const toast = document.getElementById("toast");
-const loginStep = document.getElementById("loginStep");
-
-function showToast(type, message) {
-  toast.textContent = message;
-  toast.className = `toast ${type}`;
-  toast.style.display = "block";
-  setTimeout(() => (toast.style.display = "none"), 3000);
-}
-
-// Discord login (replace client_id + redirect URL)
-loginBtn.addEventListener("click", () => {
-  const redirect = encodeURIComponent("https://app.bloxion.xyz/api/auth/discord/callback");
-  window.location.href = `https://discord.com/api/oauth2/authorize?client_id=1436072115299156058&redirect_uri=${redirect}&response_type=code&scope=identify`;
-});
-
-// Check login status (optional: via /api/me)
-(async () => {
-  try {
-    const res = await fetch("/api/me");
-    if (res.ok) {
+  <script>
+    // Check if logged in
+    (async () => {
+      const res = await fetch("/api/auth/me");
+      if (!res.ok) {
+        window.location.href = "login.html";
+        return;
+      }
       const user = await res.json();
-      showToast("success", `Logged in as ${user.username}`);
-      loginStep.style.display = "none";
-      form.style.display = "block";
-    }
-  } catch {}
-})();
+      console.log("Logged in as:", user.username);
+    })();
 
-// Handle submission
-form.addEventListener("submit", async (e) => {
-  e.preventDefault();
-  const data = {
-    username: document.getElementById("username").value.trim(),
-    group: document.getElementById("group").value.trim(),
-    reason: document.getElementById("reason").value.trim(),
-  };
+    // Form submission
+    document.getElementById("partnerForm").addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const group = document.getElementById("group").value.trim();
+      const reason = document.getElementById("reason").value.trim();
 
-  try {
-    const res = await fetch("/api/partners/submit", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify(data),
+      const res = await fetch("/api/partners/submit", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ group, reason }),
+      });
+
+      if (res.ok) window.location.href = "success.html";
+      else alert("Error submitting request");
     });
-
-    if (res.ok) {
-      showToast("success", "Request submitted!");
-      setTimeout(() => (window.location.href = "success.html"), 1000);
-    } else showToast("error", "Error submitting request.");
-  } catch {
-    showToast("error", "Network error.");
-  }
-});
-</script>
+  </script>
 </body>
 </html>
-
-
-
