Fix partnership button link in index.html
Updated the link for the partnership button from 'partners/partners.html' to 'partners/login.html'.

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <span id="statusDot" class="dot"></span>
   </div>
 
-  <a href="partners/partners.html">
+  <a href="partners/login.html">
     <button class="btn">Apply for a partnership</button>
   </a>
 
@@ -164,3 +164,4 @@ Coming soon.
   <div class="footer">© 2025 Bloxion. All rights reserved.</div>
 </body>
 </html>
+
